Reader: Fix IE11 tiled gallery tweemoji problem
Twemoji in iE11 tiled gallery captions look squashed. Fixed by creating a class and adding height and width.

--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -321,6 +321,11 @@
 		bottom: 2px;
 		left: 2px;
 		right: 2px;
+
+	img.emoji {
+		width: 1em;
+		height: 1em;
+	}
 }
 
 .tiled-gallery .tiled-gallery-item-small .tiled-gallery-caption { /* Smaller captions */
